# tufte-acm-pandoc

./: .gitignore  README.md  pyproject.toml
assets/: acm-tufte.css  script.js
defaults/: tufte-acm.yaml
lua-filters/: acm-metadata-extractor.lua
src/citet_filter/: main.py
src/tufte_filter/: __init__.py  __main__.py  main.py
