[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tufte-filter"
version = "0.1.0"
description = "Pandoc filter for acm to tufte style html"
dependencies = ["panflute>=2.3.0", "pybtex>=0.24.0", "setuptools"]

[project.scripts]
tufte-filter = "tufte_filter:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tufte_filter"]